<resources>
    <string name="app_name">huashixingkong</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_number">账&#160;&#160;&#160;&#160;号:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="old_password">旧密码:</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="title_activity_discuss_page">DiscussPageActivity</string>
    <string name="title_activity_modify">ModifyActivity</string>
</resources>
