<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.example.administrator.huashixingkong.activity.LoginActivity">

    <TextView
        android:id="@+id/text1"
        android:text="@string/user_number"
        android:textSize="23sp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        />
    <EditText
        android:id="@+id/userNumber"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/text1" />
    <TextView
        android:id="@+id/text2"
        android:text="@string/password"
        android:textSize="23sp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/text1"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/password"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/userNumber"
        android:layout_toRightOf="@id/text2"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            />
    </LinearLayout>
</RelativeLayout>
